--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,7 +9,7 @@ workflows:
     environment:
       ios_signing:
         distribution_type: app_store
-        bundle_identifier: "io.codemagic.flutteryaml"
+        bundle_identifier: "org.osivia.forms"
       vars:
         APP_ID: 6449093609 # <-- Put your APP ID here
       flutter: stable
