--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -12,6 +12,9 @@ workflows:
       flutter: stable
       xcode: latest
       cocoapods: default
+      ios_signing:
+        distribution_type: development # or: ad_hoc | development | enterprise
+        bundle_identifier: org.osivia.forms
     scripts:
       - name: Set up code signing settings on Xcode project
         script: |
