--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   vs_scrollbar: ^0.2.1
   image_picker: 0.8.7+4
+  image_picker_ios: 0.8.7+4
   intl: ^0.17.0
 
 dev_dependencies:
