--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,15 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>Allow access to your phone's location</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>Allow access your photo library</string>
+<key>NSCameraUsageDescription</key>
+<string>Allow access your phone's camera</string>
+<key>NSMicrophoneUsageDescription</key>
+<string>Allow the app to record using your phone's microphone</string>
+
+
 </dict>
 </plist>
