--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   vs_scrollbar: ^0.2.1
-  image_picker: 0.8.0
+  image_picker: 0.8.7+4
+  image_picker_ios: 0.8.7+4
   intl: ^0.17.0
 
 dev_dependencies:
