--- a/ios/PodFile
+++ b/ios/PodFile
@@ -1,16 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, ’10.0’
-
-flutter_ios_podfile_setup
-
 target 'Runner' do
   # Comment the next line if you don't want to use dynamic frameworks
- flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  use_frameworks!
  # Pods for Runner
-end
-
-post_install do |installer|
-  installer.pods_project.targets.each do |target|
-    flutter_additional_ios_build_settings(target)
-  end
 end
