--- a/ios/PodFile
+++ b/ios/PodFile
@@ -1,5 +1,8 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, ’10.0’
+
+flutter_ios_podfile_setup
+
 target 'Runner' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
