--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -38,6 +38,9 @@ workflows:
       - name: View pods
         script: |
           find . -name "Podfile" -execdir ls \;
+      - name: Modify pods
+        script: |
+          find . -name "Podfile" -execdir sed -i "1s/^/platform :ios, '12.0'/" Podfile \;
       - name: Flutter build ipa and automatic versioning
         script: |
           flutter build ipa --release \
