--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   vs_scrollbar: ^0.2.1
   image_picker: ^0.8.7+5
   intl: ^0.17.0
+  google_sign_in: 6.1.0
+  googleapis: 11.0.0
 
 dev_dependencies:
   flutter_test:
