--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   google_sign_in: 6.1.0
   googleapis: 11.0.0
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
