--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,6 +11,8 @@ project 'Runner', {
   'Release' => :release,
 }
 
+pod 'Firebase'
+
 def flutter_root
   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
   unless File.exist?(generated_xcode_build_settings_path)
