--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,6 +56,18 @@
 <key>NSMicrophoneUsageDescription</key>
 <string>Allow the app to record using your phone's microphone</string>
 
-
+<key>CFBundleURLTypes</key>
+<array>
+	<dict>
+		<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<!-- TODO Replace this value: -->
+			<!-- Copied from GoogleService-Info.plist key REVERSED_CLIENT_ID -->
+			<string>com.googleusercontent.apps.114273143423-bavkjsjt4fenn9h768nn1hcm3s1h0k3o</string>
+		</array>
+	</dict>
+</array>
 </dict>
 </plist>
