--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   googleapis: 11.0.0
   http: ^0.13.6
   file_picker: ^5.3.1
-
+  google_identity_services_web: ^0.2.1
+  google_sign_in_web: ^0.12.0+2
+  google_sign_in_platform_interface: ^2.4.0
 
 dev_dependencies:
   flutter_test:
