--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   vs_scrollbar: ^0.2.1
   image_picker: ^0.8.7+5
-  intl: ^0.17.0
+  intl: ^0.18.0
   google_sign_in: 6.1.0
   googleapis: 11.0.0
   http: ^0.13.6
@@ -46,6 +46,11 @@ dependencies:
   google_sign_in_web: ^0.12.0+2
   google_sign_in_platform_interface: ^2.4.0
   googleapis_auth: ^1.4.1
+
+  ensemble_ts_interpreter:
+    git:
+      url: https://github.com/EnsembleUI/ensemble_ts_interpreter.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
@@ -99,3 +104,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
