--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  vs_scrollbar: ^0.2.1
+  vs_scrollbar: 1.0.0
   image_picker: ^0.8.7+5
   intl: ^0.17.0
   google_sign_in: 6.1.0
