--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,7 @@ dependencies:
   google_sign_in_web: ^0.12.0+2
   google_sign_in_platform_interface: ^2.4.0
   googleapis_auth: ^1.4.1
-
-  ensemble_ts_interpreter:
-    git:
-      url: https://github.com/EnsembleUI/ensemble_ts_interpreter.git
-      ref: master
+  petitparser: ^6.0.1
 
 dev_dependencies:
   flutter_test:
