--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_sign_in_platform_interface: ^2.4.0
   googleapis_auth: ^1.4.1
   petitparser: ^6.0.1
+  flutter_typeahead: ^4.8.0
 
 dev_dependencies:
   flutter_test:
