--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   googleapis_auth: ^1.4.1
   petitparser: ^6.0.1
   flutter_typeahead: ^4.8.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
