--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,7 +9,7 @@ workflows:
     environment:
       vars:
         APP_ID: 6449093609 # <-- Put your APP ID here
-      flutter: stable
+      flutter: 3.10.5
       xcode: latest
       cocoapods: default
       ios_signing:
