--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,14 @@ dependencies:
   google_sign_in_web: ^0.12.0+2
   google_sign_in_platform_interface: ^2.4.0
   googleapis_auth: ^1.4.1
-  petitparser: ^6.0.1
+  petitparser: ^6.0.2
   flutter_typeahead: ^4.8.0
   shared_preferences: ^2.2.2
+  path_provider: ^2.1.2
+  connectivity_plus: ^5.0.2
+
+
+
 
 dev_dependencies:
   flutter_test:
