--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   connectivity_plus: ^5.0.2
-
+  path: ^1.8.3
 
 
 
@@ -76,6 +76,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - images/image-not-found.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
